--- a/1. Basic.html
+++ b/1. Basic.html
@@ -9,6 +9,7 @@
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
         <h3>Heading 3</h3>
+        <h6>Heading 6</h6>
         <p>This is a paragaph</p>
         <p>This is another paragraph.</p>
     </body>
