--- a/2. Images.html
+++ b/2. Images.html
@@ -5,6 +5,7 @@
         <title>2. Images</title>
     </head>
     <body>
-        <img src="Images/Event.png" alt="Our Event Screenshot">
+        <img src="assets/Event.png" alt="Our Event Screenshot" width="600" height="350">
+        <!--Width and Heigh are in Pixels(px)-->
     </body>
 </html>
