Added Id To 6th File and Deleted Links.html

--- a/6. Class and ID.html
+++ b/6. Class and ID.html
@@ -13,14 +13,22 @@
             line-height: 1.5;
             margin-bottom: 32px;
         }
+        #Heading1 {
+            color: lime;
+        }
+        #Heading2 {
+            color: orange;
+        }
     </style>
 </head>
 <body>
+    <h1 id="Heading1">Our Solar System</h1>
     <img class="planet-images" src="assets/Solar System.jpg" alt="Our Solar System" style="width: 600px;">
     <p class="planet-description">
         The Solar System is made up of the Sun and all the objects that orbit around it. The Sun is orbited by planets, asteroids, 
         comets and other things. It is billions of years old.
     </p>
+    <h1 id="Heading2">Earth</h1>
     <img class="planet-images" src="assets/Earth.jpg" alt="Earth" style="width: 250px; height: 250px;">
     <p class="planet-description">
         The Earth is often compared to a majestic blue marble, especially by those privileged few who have gazed upon it from orbit. 
