Updated Links and Images

--- a/7. Hyperlinks.html
+++ b/7. Hyperlinks.html
@@ -15,7 +15,7 @@
         <li><a href="6. Class Attribute.html" target="_blank">Class Attribute.html</a></li>
         <li>
             <a href="https://studentambassadors.microsoft.com/" target="_blank">
-                <img src="assets/MSLearn_SA_badge_generic_rgb_300ppi.png" height="30px" width="30px">
+                <img src="assets/MLSA.png" height="30px" width="30px">
             </a>
         </li>
     </ol>
