Internal CSS to External CSS

--- a/1. HTML/10. Tables.html
+++ b/1. HTML/10. Tables.html
@@ -2,19 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./resources/css/10. Tables.css" type="text/css">
     <title>10. Tables</title>
-    <style>
-        table ,td, th {
-            width: 800px;
-            border: 1px solid black;
-            border-collapse: collapse;
-            font-size: 24px;
-            background-color: lightskyblue;
-        }
-        td, th {
-            padding: 16px;
-        }
-    </style>
 </head>
 <body>
     <table>
