--- a/1. HTML/11. Design layouts using Tables.html
+++ b/1. HTML/11. Design layouts using Tables.html
@@ -2,21 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheel" href="./resources/css/11. Design layouts using Tables.css" type="text/css">
     <title>11. Design layouts using Tables</title>
-    <style>
-        img {
-            width: 450px;
-            height: 300px;
-        }
-        p {
-            font-size: 24px;
-            margin-top: 8px;
-        }
-        caption {
-            font-size: 40px;
-            font-weight: bolder;
-        }
-    </style>
 </head>
 <body>
     <table style="margin: auto">
