--- a/1. HTML/12. Complex Table.html
+++ b/1. HTML/12. Complex Table.html
@@ -2,27 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./resources/css/12. Complex Table.css">
     <title>12. Complex Table</title>
-    <style>
-        table {
-            width: 800px;
-            margin: auto;
-        }
-        table ,tr, td, th{
-            padding: 8px;
-            border: 1px solid black;
-            border-collapse: collapse;
-            line-height: 1.5;
-        }
-        h4 {
-            padding: 0px;
-            margin-bottom: 0;
-        }
-        th {
-            background-color: lightblue;
-            text-align: left;
-        }
-    </style>
 </head>
 <body>
     <table>
