--- a/1. HTML/13. Forms.html
+++ b/1. HTML/13. Forms.html
@@ -2,41 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./resources/css/13. Forms.css" type="text/css">
     <title>13. Forms</title>
-    <style>
-        #register-form {
-            width: 300px;
-            background-color: white;
-            padding: 24px;
-            margin: auto;
-        }
-        p {
-            margin: 0;
-            margin-bottom: 4px;
-            margin-top: 12px;
-        }
-        select {
-            margin-bottom: 20px;
-            width: 102%;
-        }
-        input,textarea {
-            width: 100%;
-        }
-        #terms {
-            width: 10%;
-            margin-top: 12px;
-            margin-bottom: 18px;
-        }
-        #male {
-            width: 10%;
-        }
-        #female {
-            width: 10%;
-        }
-        #other {
-            width: 10%;
-        }
-    </style>
 </head>
 <body style="background-color: lightblue;">
     <h1 style="text-align: center;">Signup</h1>
