--- a/1. HTML/14. Forms.html
+++ b/1. HTML/14. Forms.html
@@ -2,63 +2,8 @@
 <html>
 	<head>
 		<meta charset ="UTF-8">
+		<link rel="stylesheet" href="./resources/css/14. Forms.css" type="text/css">
 		<title>Signup Form</title>
-		<style>
-			body {
-				margin:0;
-				background-color:#f2f6ff;
-				padding:16px;
-			}
-			form{
-				margin-left:auto;
-				margin-right:auto;
-				border: 1px solid #ccc;
-				width: 700px;
-				text-align:center;
-			}
-			.logo span img{
-				width: 50px;
-				height: 50px;
-				padding-top: 16px;
-				padding-bottom: 16px;
-				padding-left:32px;
-				padding-right:32px;
-			}
-			.register{
-				background-color: #fff;
-				margin:0;
-				font-size: 32px;
-				padding-top: 56px;
-				padding-bottom: 32px;
-			}
-			.container{
-				padding-top: 80px;
-				padding-bottom: 40px;
-				padding-left:80px;
-				padding-right: 80px;
-				background-color:#fff;
-			}
-			.input input{
-				width:100%;
-				font-size: 18px;
-				padding-bottom: 12px;
-				margin-bottom: 36px;
-				border-top:0;
-				border-left:0;
-				border-right: 0;
-				border-bottom: 1px solid #ccc;
-			}
-			.submit input{
-				background-color: #0056ff;
-				padding-Top:12px;
-				padding-Bottom: 12px;
-				Padding-Left:24px;
-				padding-Right: 24px;
-				font-size: 18px;
-				color: white;
-				border: none;
-			}
-		</style>
 	</head>
   	<body>
 		<form>
