--- a/1. HTML/6. Class and ID.html
+++ b/1. HTML/6. Class and ID.html
@@ -2,24 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="./resources/css/6. Class and ID.css" rel="stylesheet" type="text/css">
     <title>6. Class Attribute</title>
-    <style>
-        .planet-images {
-            width: 250px;
-            height: 250px;
-        }
-        .planet-description {
-            font-size: 24px;
-            line-height: 1.5;
-            margin-bottom: 32px;
-        }
-        #Heading1 {
-            color: lime;
-        }
-        #Heading2 {
-            color: orange;
-        }
-    </style>
 </head>
 <body>
     <h1 id="Heading1">Our Solar System</h1>
