--- a/1. HTML/8. Semantic Elements.html
+++ b/1. HTML/8. Semantic Elements.html
@@ -2,38 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./resources/css/8. Semantic Elements.css" type="text/css">
     <title>8. Semantic Tags</title>
-    <style>
-        #header {
-            background-color: lightgreen;
-            padding: 16px;
-        }
-        #navbar {
-            background-color: lightcoral;
-            padding: 8px;
-        }
-        #main-sec {
-            background-color: indigo;
-            padding: 24px;
-
-        }
-        #section {
-            background-color:lightgreen;
-            padding: 16px;
-        }
-        .article {
-            background-color: lightpink;
-            padding: 16px;
-            margin-top: 16px;
-            margin-bottom: 16px;
-            margin-right: 16px;
-            margin-left: 16px;
-        }
-        #footer {
-            background-color: khaki;
-            padding: 24px;
-        }
-    </style>
 </head>
 <body style="margin: 0;">
     <header id="header">
