Added Styling Links in Stylink texts Files

--- a/2. CSS/1. Styling Text.html
+++ b/2. CSS/1. Styling Text.html
@@ -6,6 +6,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
+	<div id="links">
+		<a class="menu-item" href="https://www.google.com">GOOGLE</a>
+		<a class="menu-item" href="https://github.com/">GitHub</a>
+	</div>
 
 	<h1>hello world</h1>
 
