--- a/2. CSS/1. Styling Text and Links.html
+++ b/2. CSS/1. Styling Text and Links.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>1. Styling Text</title>
-	<link rel="stylesheet" type="text/css" href="1. Styling Text.css">
+	<title>1. Styling Text and Links</title>
+	<link rel="stylesheet" type="text/css" href="1. Styling Text and Links.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
