--- a/2. CSS/2. Styling Lists and Buttons.html
+++ b/2. CSS/2. Styling Lists and Buttons.html
@@ -2,22 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>2. Styling Lists</title>
-        <link rel="stylesheet" type="text/css" href="2. Styling Lists.css">
+        <title>2. Styling Lists and Buttons</title>
+        <link rel="stylesheet" type="text/css" href="2. Styling Lists and Buttons.css">
     </head>
     <body>
         <h1>Planets in our Solar System(Lists)</h1>
-        <ul class="unordered-Lists">
-            <li>Mercury</li>
-            <li>Venus</li>
-            <li>Earth</li>
-            <li>Mars</li>
-            <li>Jupiter</li>
-            <li>Saturn</li>
-            <li>Uranus</li>
-            <li>Neptune</li>
-            <li>Pluto</li>
-        </ul>
         <ul class="unordered-Lists">
             <li>Mercury</li>
             <li>Venus</li>
@@ -40,16 +29,8 @@
             <li>Neptune</li>
             <li>Pluto</li>            
         </ol>
-        <ol class="ordered-Lists">
-            <li>Mercury</li>
-            <li>Venus</li>
-            <li>Earth</li>
-            <li>Mars</li>
-            <li>Jupiter</li>
-            <li>Saturn</li>
-            <li>Uranus</li>
-            <li>Neptune</li>
-            <li>Pluto</li>
-        </ol>
+        <button id="button-login">Login</button>
+        <button id="button-signup">Signup</button>
+        <button id="button-disabled">Disable</button>
     </body>
 </html>
