Added some changes and new files

--- a/1. HTML/11. Design layouts using Tables.html
+++ b/1. HTML/11. Design layouts using Tables.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheel" href="./resources/css/11. Design layouts using Tables.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/11. Design layouts using Tables.css" type="text/css">
     <title>11. Design layouts using Tables</title>
 </head>
 <body>
