--- a/2. CSS/3. Icons.html
+++ b/2. CSS/3. Icons.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="3. Icons.css">
     <title>3. Icons</title>
-    <script src="https://kit.fontawesome.com/35c398e458.js">
-    </script>
+    <script src="https://kit.fontawesome.com/d3872db3d2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <button id="btn-facebook"><i class="fab fa-facebook-f"></i><span class="label">Facebook</span></button>
