Added few Files

--- a/2. CSS/4. Display Value.html
+++ b/2. CSS/4. Display Value.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>4. Display Value</title>
-    <link rel="stylesheet" type="text/css" href="4. Display Values.css">
+    <link rel="stylesheet" type="text/css" href="4. Display Value.css">
 </head>
 <body>
     <!--
