--- a/2. CSS/6. Float HTML Elements.html
+++ b/2. CSS/6. Float HTML Elements.html
@@ -5,7 +5,7 @@
     <title>6. Float HTML Elements</title>
     <link rel="stylesheet" type="text/css" href="/6. Float HTML Elements.css">
 </head>
-<body id="body">
+<body>
     <header class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#news">News</a>
